@startuml

title __SRC's Class Diagram__\n

  namespace  {
    class Individual {
        - bankAcct : String
        - dob : String
        {static} - type : String
        - userType : String
        + Individual()
        + Individual()
        + display()
        + getBankAcct()
        + getDay()
        + getDob()
        + getMonth()
        + getYear()
        + setBankAcct()
        + toString()
    }
  }
  

  namespace  {
    class MenuNav {
        + MenuNav()
        + actAsEvent()
        {static} + actAsIndividual()
        {static} + actAsOrganization()
        {static} + createMenu()
        {static} + mainMenu()
    }
  }
  

  namespace  {
    class Organization {
        - bankAcct : String
        - mailing : String
        - phone : String
        - tax : String
        + Organization()
        + display()
        + getBankAcct()
        + getMailing()
        + getPhone()
        + getTax()
        + toString()
    }
  }
  

  namespace  {
    class Post {
        - date : String
        - id : int
        {static} - idGenerator : int
        - message : String
        + Post()
        + Post()
        + getDate()
        + getDay()
        + getMonth()
        + getYear()
        + toString()
    }
  }
  

  namespace  {
    class Tester {
        {static} + main()
    }
  }
  

  namespace  {
    abstract class User {
        - bio : String
        - email : String
        - id : int
        {static} - idGenerator : int
        - name : String
        - password : String
        - userType : String
        - username : String
        + User()
        + display()
        + getBio()
        + getEmail()
        + getId()
        + getName()
        + getPassword()
        + getUserType()
        + getUsername()
        + toString()
    }
  }
  

  namespace  {
    class VolunteerPage {
        - address : String
        - attendees : int
        - contact : String
        - date : String
        - time : String
        + VolunteerPage()
        + addAttendees()
        + display()
        + getAddress()
        + getAttendees()
        + getContact()
        + getDate()
        + getDay()
        + getMonth()
        + getTime()
        + getYear()
        + setAddress()
        + setDate()
        + setTime()
        + toString()
    }
  }
  

  Individual -up-|> User
  Organization -up-|> User
  VolunteerPage -up-|> User


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
